--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
-body {
-    background-color: aqua;
+
+html {
+    font-size: 100%;
+}
+ul {
+    list-style: none;
+}
+
+
+
+
+/* Header */
+header {
+    height: 60px;
+    background-color: #2c3e50;
+    color: white;
+    line-height: 60px;
+}
+
+.menu-list ul li {
+    display: inline-block;
+    margin-right: 3rem;
 }
