--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,13 @@ header {
     width: 60%;
     margin: 0 auto;
 }
+
+footer {
+    
+    background-color: #3a546d;
+}
+
+.copyright {
+    background-color: #2c3e50;
+    padding: 2rem;
+}
