adding details in header and jumbotron

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,33 @@
-
+/* COMMONS */
 html {
     font-size: 100%;
 }
+
 ul {
     list-style: none;
 }
+
 img {
     width: 100%;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
 
+/* Star divisor */
+
+.ms_bar {
+    display: inline-block;
+    width: 8vw;
+    height: 2px;
+    vertical-align: middle;    
+}
+
+.white {
+    background-color: white;
+}
 
 
 /* Header */
@@ -19,10 +37,16 @@ header {
     color: white;
     line-height: 60px;
 }
+.menu-burger a {
+    color: white;
+}
 
 .menu-list ul li {
     display: inline-block;
     margin-right: 3rem;
+}
+.menu-list a {
+    color: white;
 }
 /* Header */
 
@@ -30,7 +54,8 @@ header {
 
     /* Jumbotron */
 .jumbotron {
-    background-color: aqua;
+    background-color: #1abc9c;
+    color: white;
 }
 .avatar-wrapper img {
     max-width: 8rem;
@@ -47,7 +72,6 @@ header {
     /* About */
 
 .about {
-
     background-color: aqua;
 }
 
